Fix collection links on mobile
Fixes #330

--- a/src/components/organisms/shelf/_index.scss
+++ b/src/components/organisms/shelf/_index.scss
@@ -17,6 +17,7 @@
   }
 
   &::before {
+    display: none;
     position: absolute;
     right: 0.875rem;
     bottom: 0.625rem;
@@ -26,6 +27,10 @@
 
   @media screen and (min-width: $layout-medium-breakpoint) {
     pointer-events: none;
+
+    &::before {
+      display: block;
+    }
 
     &::after {
       position: absolute;
